--- a/package.json
+++ b/package.json
@@ -9,17 +9,28 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@react-three/drei": "9.75.0",
-    "@react-three/fiber": "8.13.3",
-    "@types/three": "0.152.1",
+    "@react-three/drei": "^9.75.0",
+    "@react-three/fiber": "^8.13.3",
+    "@react-three/rapier": "^1.3.0",
+    "@types/three": "^0.152.1",
+    "gltfjsx": "^6.2.16",
+    "localforage": "^1.10.0",
+    "match-sorter": "^6.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "three": "0.153.0"
+    "react-router-dom": "^6.22.3",
+    "sort-by": "^1.2.0",
+    "three": "^0.153.0",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-react": "^3.1.0",
+    "autoprefixer": "^10.4.18",
+    "daisyui": "^4.7.3",
+    "postcss": "^8.4.35",
+    "tailwindcss": "^3.4.1",
     "vite": "^4.1.0"
   }
 }
